# Nira-bot

./: .breakpoints  .gitignore  .replit  README.md  asciify.py  config.json  database.py  delete_command_config.json  feedback_channels.json  main.py  mentionable_tree.py  pyproject.toml  reaction_roles.json  replit.nix  requirements.txt
cogs/: __init__.py  animanga.py  anime.py  automod.py  cheese.py  chess.py  delete.py  embed.py  encode.py  error.py  feedback.py  fun.py  games.py  giveaway.py  help.py  imagery.py  imgtotxt.py  level.py  manga.py  meme.py  memory.py  mod.py  music.py  nsfw.py  owner.py  plant.py  poke.py  prefix.py  premium.py  reactionrole.py  shortner.py  song.py  sync.py  tetris.py  trivia.py  ttt.py  urban.py  utils.py  weather.py  welcome.py  (+2 more)
cogs/animanga/: animanga.py
cogs/embed/: embed.py
cogs/encode\decode/: encode.py
cogs/error/: error.py
cogs/fun/: fun.py
cogs/games/: games.py
cogs/help/: help.py
cogs/imagery/: __init__.py  imagery.py
cogs/levelling/: level.py  streaks.py
cogs/moderation/: mod.py  test.py
cogs/owner/: owner.py
data/: custom_colors.py  feedback_channels.json  reaction_roles.json  tracked_messages.json
helpers/: persistent.py
modules/: animemod.py  asciify.py  chessmod.py  embedmod.py  embedtemp.py  emojify.py  levelmod.py  mangamod.py  mememod.py  memorymod.py  pokemod.py  shortnermod.py  tetrismod.py  timestampmod.py  timezones.py  triviamod.py  urbanmod.py  weathermod.py  wikimod.py
upcoming/: lyrcgen.py  password.py  song.py  testhelp.py
utils/: common_utils.py  helpembed.py  helputil.py  wel.py
(+31 files in other folders)
