[tool.poetry]
name = "repl-nix-stellar"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_stellar"}]

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.9.5"
discord-py = "^2.4.0"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
youtube-dl = "^2021.12.17"
colorlog = "^6.8.2"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
